--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "our-store-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://duledd.github.io/react-store-app-v3-ts/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
